Improve header readablity and gave new proj name

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .App-header {
-  background: linear-gradient(135deg, #2c3e50 0%, #4ca1af 100%);
+  background: darkgray;
   padding: 2.5rem 2rem;
   color: white;
   margin-bottom: 2rem;
